Disabled broken feeds.

--- a/config.ini
+++ b/config.ini
@@ -86,14 +86,14 @@ name = #emacs tidbits
 # [http://www.lathi.net/diary/index.rss]
 name = @Lathi.net
 
-[http://www.sood.net.in/journal/index.php/archives/category/computing/emacs/feed]
-name = aadis
+# [http://www.sood.net.in/journal/index.php/archives/category/computing/emacs/feed]
+# name = aadis
 
 [http://www.emacswiki.org/cgi-bin/alex?action=journal;search=tag%3Aemacs;rsslimit=2;full=1]
 name = Alex Schroeder
 
-[http://blog.brettkelly.org/?feed=rss2]
-name = Brett Kelly
+# [http://blog.brettkelly.org/?feed=rss2]
+# name = Brett Kelly
 
 [http://www.davids-world.com/atom.xml]
 name = David's World
@@ -114,7 +114,8 @@ name = ink's Emacs Lisp Blog
 [http://www.livejournal.com/users/yrk/data/atom]
 name = Yoni Rabkin Katzenell
 
-[http://jasonrumney.net/roller/rss/jason]
+# [http://jasonrumney.net/roller/rss/jason]
+[http://home.jasonrumney.net/roller/jason/feed/entries/rss]
 name = Jason Rumney
 
 [http://www.forcix.cx/weblog/index.rss]
@@ -132,8 +133,8 @@ name = Bryan Murdock
 [http://blog.mwolson.org/tech/index.rss]
 name = Michael Olson
 
-[http://jasondunsmore.blogspot.com/feeds/posts/default/-/emacs]
-name = Jason Dunsmore
+# [http://jasondunsmore.blogspot.com/feeds/posts/default/-/emacs]
+# name = Jason Dunsmore
 
 # [http://feeds.feedburner.com/wjsullivan]
 [http://pipes.yahoo.com/pipes/pipe.run?_id=FiExI4MS3RG8VVYcM1rX_Q&_render=rss]
@@ -157,11 +158,11 @@ name = Phil Hagelberg
 [http://furius.ca/blog/tag/Emacs/rss]
 name = Martin Blais
 
-[http://blog.romanlagunov.ru/feed/atom/]
-name = Roman Lagunov
+# [http://blog.romanlagunov.ru/feed/atom/]
+# name = Roman Lagunov
 
-[http://www.cs.nmsu.edu/~bpalmer/cgi-bin/blosxom/xemacs/index.rss]
-name = Brian Palmer
+# [http://www.cs.nmsu.edu/~bpalmer/cgi-bin/blosxom/xemacs/index.rss]
+# name = Brian Palmer
 
 # [http://feed43.com/powerbookjournal.xml]
 # name = Luis Fernandes
