--- a/config.ini
+++ b/config.ini
@@ -305,3 +305,6 @@ name = Anupam Sengupta
 
 [http://tromey.com/blog/?cat=11&feed=rss2]
 name = Tom Tromey
+
+[http://www.bennee.com/~alex/blog/?feed=rss2&tag=emacs]
+name = Alex Bennée
