Added 'Got Emacs?'

--- a/config.ini
+++ b/config.ini
@@ -308,3 +308,6 @@ name = Tom Tromey
 
 [http://www.bennee.com/~alex/blog/?feed=rss2&tag=emacs]
 name = Alex Bennée
+
+[http://emacsworld.blogspot.com/feeds/posts/default]
+name = Got Emacs?
