Added several feeds, and disabled one (johnw's)

--- a/config.ini
+++ b/config.ini
@@ -149,8 +149,8 @@ name = Barry Hawkins
 [http://pfhawkins.com/tag/emacs/feed/atom/]
 name = P.F. Hawkins
 
-[http://feeds.feedburner.com/newartisanscom]
-name = John Wiegley
+# [http://feeds.feedburner.com/newartisanscom]
+# name = John Wiegley
 
 [http://technomancy.us/feed/atom]
 name = Phil Hagelberg
@@ -306,8 +306,17 @@ name = Anupam Sengupta
 [http://tromey.com/blog/?cat=11&feed=rss2]
 name = Tom Tromey
 
+[http://tromey.com/elpa/elpa.rss]
+name = ELPA News
+
 [http://www.bennee.com/~alex/blog/?feed=rss2&tag=emacs]
 name = Alex Bennée
 
 [http://emacsworld.blogspot.com/feeds/posts/default]
 name = Got Emacs?
+
+[http://kanis.fr/blog-emacs.xml]
+name = Ivan Kanis
+
+[http://www.littleredbat.net/mk/blog/atom-emacs.xml]
+name = Matt Keller
