Added Thomas Kappler's Emacs feed.

--- a/config.ini
+++ b/config.ini
@@ -320,3 +320,6 @@ name = Ivan Kanis
 
 [http://www.littleredbat.net/mk/blog/atom-emacs.xml]
 name = Matt Keller
+
+[http://jugglingbits.wordpress.com/tag/emacs/feed/]
+name = Thomas Kappler
