Added Mykola Nikishov's Emacs tag feed.

--- a/config.ini
+++ b/config.ini
@@ -323,3 +323,6 @@ name = Matt Keller
 
 [http://jugglingbits.wordpress.com/tag/emacs/feed/]
 name = Thomas Kappler
+
+[http://manandbytes.wordpress.com/tag/emacs/feed/]
+name = Mykola Nikishov
