Added Jonas Bernoulli.

--- a/config.ini
+++ b/config.ini
@@ -326,3 +326,6 @@ name = Thomas Kappler
 
 [http://manandbytes.wordpress.com/tag/emacs/feed/]
 name = Mykola Nikishov
+
+# [http://feeds.feedburner.com/emacsair]
+# name = Jonas Bernoulli
