Two new feeds; one changed feed.

--- a/config.ini
+++ b/config.ini
@@ -192,7 +192,8 @@ name = M-x all-things-emacs
 [http://www.chmouel.com/blog/category/emacs/feed]
 name = Chmouel
 
-[http://jfm3-repl.blogspot.com/atom.xml]
+# [http://jfm3-repl.blogspot.com/atom.xml]
+[http://jfm3-repl.blogspot.com/feeds/posts/default/-/emacs]
 name = Joseph Miklojcik
 
 [http://feeds.feedburner.com/emacslife]
@@ -329,3 +330,9 @@ name = Mykola Nikishov
 
 # [http://feeds.feedburner.com/emacsair]
 # name = Jonas Bernoulli
+
+[http://blog.peopleareducks.com/category/emacs/feed/]
+name = Tim Bielawa
+
+[http://scottfrazersblog.blogspot.com/feeds/posts/default]
+name = Scott Frazer
