--- a/en.ini
+++ b/en.ini
@@ -337,3 +337,9 @@ name = Tim Bielawa
 
 [http://scottfrazersblog.blogspot.com/feeds/posts/default]
 name = Scott Frazer
+
+[http://sxemacs-en.blogspot.com/feeds/posts/default]
+name = Zajcev Evgeny
+
+[http://blog.tuxicity.se/atom-emacs.xml]
+name = Johan Andersson
