Added Tycho Garen.

--- a/en.ini
+++ b/en.ini
@@ -343,3 +343,6 @@ name = Zajcev Evgeny
 
 [http://blog.tuxicity.se/atom-emacs.xml]
 name = Johan Andersson
+
+[http://tychoish.com/feed/emacs.xml]
+name = Tycho Garen
