Russian subscription changes from Alex.

--- a/ru.ini
+++ b/ru.ini
@@ -87,10 +87,6 @@ name = Catap
 [http://evg-krsk.livejournal.com/data/atom?tag=emacs]
 name = evg_krsk
 
-# [http://piranha.org.ua/feeds/tag/emacs/]
-[http://piranha.org.ua/feeds/atom/tag/emacs/]
-name = Amazon byteflow
-
 [http://puzan-linux.blogspot.com/feeds/posts/default/-/emacs]
 name = Ilya Zonov
 
@@ -176,3 +172,6 @@ name = Emacs в Fedora Linux
 
 [http://samolisov.blogspot.com/feeds/posts/default/-/emacs]
 name = Pavel Samolisov
+
+[http://brain-break-ru.blogspot.com/feeds/posts/default/-/emacs]
+name = Oleksandr Gavenko
