Add Oleksandr's English emacs posts to en.

--- a/en.ini
+++ b/en.ini
@@ -346,3 +346,6 @@ name = Johan Andersson
 
 [http://tychoish.com/feed/emacs.xml]
 name = Tycho Garen
+
+[http://brain-break.blogspot.com/feeds/posts/default/-/emacs]
+name = Oleksandr Gavenko
