Various subscription updates, additions, and removals that had queued up.

--- a/en.ini
+++ b/en.ini
@@ -170,8 +170,8 @@ name = Martin Blais
 [http://klibb.com/cgi-bin/wiki.pl?action=journal;match=^Emacs.Blog.2;full=on;rsslimit=14]
 name = Mathias Dahl
 
-[http://www.antisleep.com/rss/elisp.xml.php]
-name = Scott Evans
+# [http://www.antisleep.com/rss/elisp.xml.php]
+# name = Scott Evans
 
 [http://tsdh.wordpress.com/feed/]
 name = Tassilo Horn
@@ -189,7 +189,8 @@ name = minor emacs wizardry
 [http://www.emacsblog.org/feed/]
 name = M-x all-things-emacs
 
-[http://www.chmouel.com/blog/category/emacs/feed]
+# [http://www.chmouel.com/blog/category/emacs/feed]
+[http://www.chmouel.com/blog/category/emacs/feed/]
 name = Chmouel
 
 # [http://jfm3-repl.blogspot.com/atom.xml]
@@ -220,7 +221,8 @@ name = Chris Ball
 [http://subtech.g.hatena.ne.jp/antipop/rss2]
 name = antipop
 
-[http://20y.hu/tag/planet_emacsen/feed/rss2]
+# [http://20y.hu/tag/planet_emacsen/feed/rss2]
+[http://20y.hu/tag/planet_emacsen/feed]
 name = Gábor Török
 
 [http://aaronhawley.livejournal.com/data/atom]
@@ -240,8 +242,8 @@ name = Johan Lindström
 
 # [http://mocker.org/blog/feed/]
 # [http://users.livejournal.com/mocker_/data/atom?tag=emacs]
-[http://mocker.org/blog/?feed=rss2&tag=emacs]
-name = Kyle Sexton
+# [http://mocker.org/blog/?feed=rss2&tag=emacs]
+# name = Kyle Sexton
 
 [http://www.rlazo.org/blog/feeds/category/Emacs/]
 name = Rodrigo Lazo
@@ -255,7 +257,8 @@ name = Juan Garcia
 [http://alexott.blogspot.com/feeds/posts/default/-/emacs]
 name = Alex Ott
 
-[http://mnemonikk.org/?feed=rss2]
+# [http://mnemonikk.org/?feed=rss2]
+[http://mnemonikk.org/feed/]
 name = Anselm Helbig
 
 [http://atomized.org/tag/emacs/feed/]
@@ -264,8 +267,8 @@ name = Ian Eure
 [http://www.randomsample.de/dru5/taxonomy/term/2/0/feed]
 name = Random Sample
 
-[http://blog.feelingroot.com/?cat=3&feed=atom]
-name = Cezar Halmagean
+# [http://blog.feelingroot.com/?cat=3&feed=atom]
+# name = Cezar Halmagean
 
 [http://keramida.wordpress.com/category/emacs/feed/]
 name = Giorgos Keramidas
@@ -311,7 +314,8 @@ name = Tom Tromey
 [http://tromey.com/elpa/elpa.rss]
 name = ELPA News
 
-[http://www.bennee.com/~alex/blog/?feed=rss2&tag=emacs]
+# [http://www.bennee.com/~alex/blog/?feed=rss2&tag=emacs]
+[http://www.bennee.com/~alex/blog/feed/?tag=emacs]
 name = Alex Bennée
 
 [http://emacsworld.blogspot.com/feeds/posts/default]
@@ -349,3 +353,15 @@ name = Tycho Garen
 
 [http://brain-break.blogspot.com/feeds/posts/default/-/emacs]
 name = Oleksandr Gavenko
+
+[http://joost.zeekat.nl/category/emacs/feed/]
+name = Joost Diepenmaat
+
+[http://julien.danjou.info/blog/index.xml]
+name = Julien Danjou
+
+[http://curiousprogrammer.wordpress.com/tag/emacs/feed/atom/]
+name = Juan Garcia
+
+[http://gnu.manticore.es/taxonomy/term/1/0/feed]
+name = suso
