--- a/ru.ini
+++ b/ru.ini
@@ -112,8 +112,8 @@ name = Nroff
 [http://feeds.feedburner.com/emacs]
 name = Немного о GNU Emacs
 
-[http://dima-exe.ru/feed/tags/emacs]
-name = dima-exe.ru 
+# [http://dima-exe.ru/feed/tags/emacs]
+# name = dima-exe.ru 
 
 # [http://habrahabr.ru/rss/blog/emacs/]
 [http://habrahabr.ru/rss/blogs/emacs/]
@@ -143,7 +143,8 @@ name = Viktor Nemckoff
 [http://sxemacsen.blogspot.com/feeds/posts/default]
 name = SXEmacsen
 
-[http://redchrom.blogspot.com/feeds/posts/default/-/emacs]
+# [http://redchrom.blogspot.com/feeds/posts/default/-/emacs]
+[http://blog.zastupov.com/feeds/posts/default/-/emacs]
 name = RedChrom
 
 [http://grundik.livejournal.com/data/atom?tag=emacs]
