Added Dimitri Fontaine's feed.

--- a/en.ini
+++ b/en.ini
@@ -366,3 +366,6 @@ name = Juan Garcia
 
 [http://gnu.manticore.es/taxonomy/term/1/0/feed]
 name = suso
+
+[http://tapoueh.org/news.dim.xml]
+name = Dimitri Fontaine
