Removed Denis Evsjukov from ru.

--- a/ru.ini
+++ b/ru.ini
@@ -162,8 +162,8 @@ name = kashnikov
 [http://kostafey.blogspot.com/feeds/posts/default/-/Emacs]
 name = Kostafey
 
-[http://www.juev.ru/tag/emacs/feed/]
-name = Denis Evsjukov
+# [http://www.juev.ru/tag/emacs/feed/]
+# name = Denis Evsjukov
 
 [http://tuxray.blogspot.com/feeds/posts/default/-/emacs]
 name = TuXray
