Added Phil Sung. Re-added Kyle Sexton.

--- a/en.ini
+++ b/en.ini
@@ -243,7 +243,9 @@ name = Johan Lindström
 # [http://mocker.org/blog/feed/]
 # [http://users.livejournal.com/mocker_/data/atom?tag=emacs]
 # [http://mocker.org/blog/?feed=rss2&tag=emacs]
-# name = Kyle Sexton
+# [http://mocker.org/tag/emacs]
+[http://mocker.org/rss.xml?tag=emacs]
+name = Kyle Sexton
 
 [http://www.rlazo.org/blog/feeds/category/Emacs/]
 name = Rodrigo Lazo
@@ -369,3 +371,6 @@ name = suso
 
 [http://tapoueh.org/news.dim.xml]
 name = Dimitri Fontaine
+
+[http://psung.blogspot.com/feeds/posts/default/-/emacs]
+name = Phil Sung
