Added Vinh Nguyen.

--- a/en.ini
+++ b/en.ini
@@ -374,3 +374,6 @@ name = Dimitri Fontaine
 
 [http://psung.blogspot.com/feeds/posts/default/-/emacs]
 name = Phil Sung
+
+[http://blog.nguyenvq.com/category/emacs/feed/]
+name = Vinh Nguyen
