Added Richard Riley

--- a/en.ini
+++ b/en.ini
@@ -377,3 +377,6 @@ name = Phil Sung
 
 [http://blog.nguyenvq.com/category/emacs/feed/]
 name = Vinh Nguyen
+
+[http://splash-of-open-sauce.blogspot.com/feeds/posts/default/-/planetemacsen]
+name = Richard Riley
