Added Aidan McQuay

--- a/en.ini
+++ b/en.ini
@@ -380,3 +380,6 @@ name = Vinh Nguyen
 
 [http://splash-of-open-sauce.blogspot.com/feeds/posts/default/-/planetemacsen]
 name = Richard Riley
+
+[http://floatsolutions.com/blog/category/emacs/feed/]
+name = Aidan McQuay
