Added Jonas Bernoulli

--- a/en.ini
+++ b/en.ini
@@ -336,8 +336,8 @@ name = Thomas Kappler
 [http://manandbytes.wordpress.com/tag/emacs/feed/]
 name = Mykola Nikishov
 
-# [http://feeds.feedburner.com/emacsair]
-# name = Jonas Bernoulli
+[http://feeds.feedburner.com/emacsair]
+name = Jonas Bernoulli
 
 [http://blog.peopleareducks.com/category/emacs/feed/]
 name = Tim Bielawa
