Added Andrew Gwozdziewycz and Mickey Peterson.

--- a/en.ini
+++ b/en.ini
@@ -383,3 +383,9 @@ name = Richard Riley
 
 [http://floatsolutions.com/blog/category/emacs/feed/]
 name = Aidan McQuay
+
+[http://sigusr2.net/tags/emacs.xml]
+name = Andrew Gwozdziewycz
+
+[http://www.masteringemacs.org/feed/]
+name = Mickey Petersen
