Added a feed; updated link to a feed.

--- a/en.ini
+++ b/en.ini
@@ -348,7 +348,7 @@ name = Scott Frazer
 [http://sxemacs-en.blogspot.com/feeds/posts/default]
 name = Zajcev Evgeny
 
-[http://blog.tuxicity.se/atom-emacs.xml]
+[http://feeds.feedburner.com/tuxicity-emacs]
 name = Johan Andersson
 
 [http://tychoish.com/feed/emacs.xml]
@@ -389,3 +389,6 @@ name = Andrew Gwozdziewycz
 
 [http://www.masteringemacs.org/feed/]
 name = Mickey Petersen
+
+[http://tehom-blog.blogspot.com/feeds/posts/default]
+name = Tom Breton
