Updated Tom Breton's subscription. Added three new subscriptions.

--- a/en.ini
+++ b/en.ini
@@ -390,5 +390,14 @@ name = Andrew Gwozdziewycz
 [http://www.masteringemacs.org/feed/]
 name = Mickey Petersen
 
-[http://tehom-blog.blogspot.com/feeds/posts/default]
+[http://tehom-blog.blogspot.com/feeds/posts/default/-/emacs]
 name = Tom Breton
+
+[http://www.mostlymaths.net/feeds/posts/default/-/emacs]
+name = Rubén Berenguel
+
+[http://42kettles.net/?cat=6&feed=atom]
+name = Daniel Blanc
+
+[http://robert-adesam.blogspot.com/feeds/posts/default/-/emacs]
+name = Robert Adesam
