add 2 more blogs

--- a/en.ini
+++ b/en.ini
@@ -401,3 +401,11 @@ name = Daniel Blanc
 
 [http://robert-adesam.blogspot.com/feeds/posts/default/-/emacs]
 name = Robert Adesam
+
+#[http://xahlee.blogspot.com/feeds/posts/default/-/emacs]
+[http://feeds.feedburner.com/XahsEmacsBlog]
+name = Xah Lee
+
+[http://pozorvlak.livejournal.com/data/atom?tag=emacs]
+name = pozorvlak
+
