add Anthony Simpson's blog

--- a/en.ini
+++ b/en.ini
@@ -416,3 +416,6 @@ name = R. Siddharth
 [http://pipes.yahoo.com/pipes/pipe.run?_id=cb318680d0fab4cbaec11d558af0f71f&_render=rss]
 name = Ben Simon
 
+[http://blog.raynes.me/?feed=rss2&cat=6]
+name = Anthony Simpson
+
