add 3 more blogs

--- a/en.ini
+++ b/en.ini
@@ -409,3 +409,13 @@ name = Robert Adesam
 [http://pozorvlak.livejournal.com/data/atom?tag=emacs]
 name = pozorvlak
 
+[http://rsiddharth.wordpress.com/category/emacs/feed/]
+name = R. Siddharth
+
+# http://benjisimon.blogspot.com/
+[http://pipes.yahoo.com/pipes/pipe.run?_id=cb318680d0fab4cbaec11d558af0f71f&_render=rss]
+name = Ben Simon
+
+[http://blog.nguyenvq.com/tag/emacs/feed/]
+name = Vinh Nguyen
+
