--- a/en.ini
+++ b/en.ini
@@ -419,3 +419,10 @@ name = Ben Simon
 [http://blog.raynes.me/?feed=rss2&cat=6]
 name = Anthony Simpson
 
+# http://www.method-combination.net/blog/
+[http://pipes.yahoo.com/pipes/pipe.run?_id=6b6842cdd1e2c960ee8b46a45b257b85&_render=rss]
+name = Irate Nate
+
+# http://mark.aufflick.com/blog/
+[http://pipes.yahoo.com/pipes/pipe.run?_id=75d1e170761da7129c7525b9e96a17ab&_render=rss]
+name = Mark Aufflick
