--- a/ru.ini
+++ b/ru.ini
@@ -176,3 +176,6 @@ name = Pavel Samolisov
 
 [http://brain-break-ru.blogspot.com/feeds/posts/default/-/emacs]
 name = Oleksandr Gavenko
+
+[http://y5ae-ru.blogspot.com/feeds/posts/default/-/emacs]
+name = Andy Legkiy
