remove yandex emacs club

--- a/ru.ini
+++ b/ru.ini
@@ -78,8 +78,8 @@ name = Alex Ott
 [http://community.livejournal.com/ru_emacs/data/atom]
 name = Emacs LJ community
 
-[http://clubs.ya.ru/4611686018427388118/rss/posts.xml]
-name = Emacs club (ya.ru)
+#[http://clubs.ya.ru/4611686018427388118/rss/posts.xml]
+#name = Emacs club (ya.ru)
 
 [http://catap.ru/feeds/atom/tag/emacs/]
 name = Catap
