Added Benjamin Slade and Shane Celis. Updated Venus.

--- a/en.ini
+++ b/en.ini
@@ -401,3 +401,9 @@ name = Daniel Blanc
 
 [http://robert-adesam.blogspot.com/feeds/posts/default/-/emacs]
 name = Robert Adesam
+
+[http://babbagefiles.blogspot.com/feeds/posts/default/-/emacs]
+name = Benjamin Slade
+
+[http://gnufool.blogspot.com/feeds/posts/default/-/emacs]
+name = Shane Celis
