add Mihai Bazon's blog

--- a/en.ini
+++ b/en.ini
@@ -428,3 +428,6 @@ name = Nathan Froyd
 # http://mark.aufflick.com/blog/
 [http://pipes.yahoo.com/pipes/pipe.run?_id=75d1e170761da7129c7525b9e96a17ab&_render=rss]
 name = Mark Aufflick
+
+[http://mihai.bazon.net/blog?category=5&feed=rss2]
+name = Mihai Bazon
