use emacs tag for habrahabr

--- a/ru.ini
+++ b/ru.ini
@@ -115,9 +115,9 @@ name = Немного о GNU Emacs
 # [http://dima-exe.ru/feed/tags/emacs]
 # name = dima-exe.ru 
 
-# [http://habrahabr.ru/rss/blog/emacs/]
-[http://habrahabr.ru/rss/blogs/emacs/]
-name = Emacs at Habrahabr
+#[http://habrahabr.ru/rss/blogs/emacs/]
+[http://habrahabr.ru/rss/tag/emacs/]
+name = Emacs@Habrahabr
 
 [http://13-49.livejournal.com/data/atom?tag=emacs]
 name = 13-49
