grab more emacs-related blogs from wordpress

--- a/en.ini
+++ b/en.ini
@@ -431,3 +431,136 @@ name = Mark Aufflick
 
 [http://mihai.bazon.net/blog?category=5&feed=rss2]
 name = Mihai Bazon
+
+[http://chopmode.wordpress.com/category/emacs/feed/]
+name = Jacob Poulsgaard Tjørnholm
+
+[http://ikaruga2.wordpress.com/tag/emacs/feed/]
+name = Ikaruga 2
+
+[http://sinewalker.wordpress.com/tag/emacs/feed/]
+name = Michael Lockhart
+
+[http://kuniganotas.wordpress.com/category/emacs/feed/]
+name = Kunigami
+
+[http://rvfblog.wordpress.com/category/emacs/feed/]
+name = Rafael
+
+[http://crazythinking.wordpress.com/category/emacs/feed/]
+name = Crazy thinking
+
+[http://baongoc124.wordpress.com/category/emacs/feed/]
+name = baongoc124
+
+[http://jonathancamp.com/tag/emacs/feed/]
+name = Jonathan Camp
+
+[http://au9ustine.wordpress.com/tag/emacs/feed/]
+name = au9ustine
+
+[http://doxdrum.wordpress.com/tag/emacs/feed/]
+name = Oscar Castillo-Felisola
+
+[http://panduwana.wordpress.com/category/emacs/feed/]
+name = panduwana
+
+[http://arunsag.wordpress.com/category/emacs/feed/]
+name = Arun Sag
+
+[http://tegebo.com/category/editors/emacs/feed/]
+name = Ian Tegebo
+
+[http://seeknuance.com/tag/emacs/feed/]
+name = John DeRosa
+
+[http://techleaves.wordpress.com/tag/emacs/feed/]
+name = Ragesh Chakkadath
+
+[http://bloggingmath.wordpress.com/tag/emacs/feed/]
+name = Bryan Bell
+
+[http://wolfgangpfaff.wordpress.com/category/emacs/feed/]
+name = Wolfgang Pfaff
+
+[http://mousecradle.wordpress.com/tag/emacs/feed/]
+name = "The Mouse's cradle"
+
+[http://kevand.wordpress.com/tag/emacs/feed/]
+name = Kevin Anderson
+
+[http://netflux.wordpress.com/tag/emacs/feed/]
+name = Václav Belák
+
+[http://rforge.org/category/emacs/feed/]
+name = Rforge
+
+[http://jawher.wordpress.com/category/emacs/feed/]
+name = Jawher Moussa
+
+[http://blog.bogosity.se/tag/emacs/feed/]
+name = Andreas Olsson
+
+[http://awhan.wordpress.com/category/emacs/feed/]
+name = Awhan Patnaik
+
+[http://tincman.wordpress.com/tag/emacs/feed/]
+name = Mathletic
+
+[http://calltopower.wordpress.com/tag/emacs/feed/]
+name = Denis Meyer
+
+[http://zingming.wordpress.com/tag/emacs/feed/]
+name = Zing-Ming
+
+[http://roylowrance.wordpress.com/category/emacs/feed/]
+name = Roy Lowrance 
+
+[http://ignaciopp.wordpress.com/tag/emacs/feed/]
+name = Ignacio Paz Posse
+
+[http://gaiustech.wordpress.com/category/emacs/feed/]
+name = Gaius
+
+[http://hbfs.wordpress.com/category/emacs/feed/]
+name = Steven Pigeon
+
+[http://lanxin0106.wordpress.com/category/emacs/]
+name = Xin Hu
+
+#[http://hillwithfields.wordpress.com/category/programming-2/emacs/feed/]
+#name = 
+
+[http://l0st3d.wordpress.com/category/emacs/feed/]
+name = Ed Bowler
+
+[http://yilmazhuseyin.wordpress.com/category/emacs/feed/]
+name = Huseyin Yilmaz
+
+[http://gongyiliao.wordpress.com/category/emacs/feed/]
+name = Gong-Yi
+
+[http://punchcard.wordpress.com/tag/emacs/feed/]
+name = Christian Tinnefeld and Martin Grund
+
+[http://vocalfolds.wordpress.com/category/emacs/feed/]
+name = vocalfolds
+
+[http://suvayu.wordpress.com/tag/emacs/feed/]
+name = Suvayu Ali
+
+#[http://pyyou.wordpress.com/category/emacs/feed/]
+#name = 
+
+[http://draptik.wordpress.com/tag/emacs/feed/]
+name = Draptik
+
+[http://axelio.wordpress.com/category/emacs/feed/]
+name = Aleix Conchillo Flaque
+
+[http://nongeekrecipes.wordpress.com/category/emacs-and-friends/feed/]
+name = Marco Zuliani
+
+[http://rhburrows.com/category/emacs/feed/]
+name = Programming and Prose
+
