--- a/en.ini
+++ b/en.ini
@@ -281,8 +281,8 @@ name = Gabriel Saldaña
 [http://www.carcosa.net/jason/blog/computing/index.rss2]
 name = Jason McBrayer
 
-[http://twitter.com/statuses/user_timeline/9492852.rss]
-name = @emacs
+# [http://twitter.com/statuses/user_timeline/9492852.rss]
+# name = @emacs
 
 # [http://emacs-fu.blogspot.com/atom.xml]
 [http://emacs-fu.blogspot.com/feeds/posts/default/-/new]
