add Vincent Toups's blog

--- a/en.ini
+++ b/en.ini
@@ -564,3 +564,5 @@ name = Marco Zuliani
 [http://rhburrows.com/category/emacs/feed/]
 name = Programming and Prose
 
+[http://dorophone.blogspot.com/feeds/posts/default/-/emacs]
+name = Vincent Toups
