--- a/en.ini
+++ b/en.ini
@@ -566,3 +566,11 @@ name = Programming and Prose
 
 [http://dorophone.blogspot.com/feeds/posts/default/-/emacs]
 name = Vincent Toups
+
+[http://blog.edencardim.com/archives/tag/emacs]
+name = edencardim.com
+
+#look to:
+# - http://lars.ingebrigtsen.no/
+# - http://zianet.dk/blog/
+# - http://blog.vivekhaldar.com/
