add Bart Lantz's blog

--- a/en.ini
+++ b/en.ini
@@ -566,3 +566,6 @@ name = Programming and Prose
 
 [http://dorophone.blogspot.com/feeds/posts/default/-/emacs]
 name = Vincent Toups
+
+[http://denverdroid.blogspot.com/feeds/posts/default/-/emacs]
+name = Bart Lantz
