--- a/en.ini
+++ b/en.ini
@@ -564,3 +564,17 @@ name = Marco Zuliani
 [http://rhburrows.com/category/emacs/feed/]
 name = Programming and Prose
 
+[http://blog.dskang.com/category/emacs/feed/]
+name = "Dan's Blog"
+
+[http://tsengf.blogspot.com/feeds/posts/default/-/emacs]
+name = Anything goes
+
+[http://xeno-by.livejournal.com/data/atom?tag=emacs]
+name = Eugene Burmako
+
+[http://irreal.org/blog/?tag=emacs&feed=rss2]
+name = Irreal
+
+# TODO: 
+# look to http://snarfed.org/ 
