Update Mark Hershberger's subscription.

--- a/en.ini
+++ b/en.ini
@@ -206,8 +206,8 @@ name = Flickr tag 'emacs'
 [http://feeds.feedburner.com/ted-roden-emacs]
 name = Ted Roden
 
-[http://www.openweblog.com/users/hexmode/data/atom?tag=emacs]
-name = hexmode
+[http://hexmode.com/tag/emacs/feed]
+name = Mark Hershberger
 
 [http://peadrop.com/blog/category/computers/emacs/feed/]
 name = Alexandre Vassalotti
