Disabled Barry Hawkins.

--- a/en.ini
+++ b/en.ini
@@ -143,8 +143,9 @@ name = John Sullivan
 # [http://www.waider.ie/diary-rss.xml]
 # name = Waider
 
-[http://www.yepthatsme.com/feed/atom/]
-name = Barry Hawkins
+# Disabled because he hasn't posted about Emacs in years...
+# [http://www.yepthatsme.com/feed/atom/]
+# name = Barry Hawkins
 
 [http://pfhawkins.com/tag/emacs/feed/atom/]
 name = P.F. Hawkins
