--- a/en.ini
+++ b/en.ini
@@ -586,6 +586,9 @@ name = Bart Lantz
 [http://blog.edencardim.com/archives/tag/emacs]
 name = edencardim.com
 
+[http://www.lxsameer.com/?cat=5&feed=rss2]
+name = lxsameer
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
