--- a/en.ini
+++ b/en.ini
@@ -352,8 +352,8 @@ name = Zajcev Evgeny
 [http://feeds.feedburner.com/tuxicity-emacs]
 name = Johan Andersson
 
-[http://tychoish.com/feed/emacs.xml]
-name = Tycho Garen
+[http://tychoish.com/tag/emacs/feed/index.rss]
+name = tycho garen
 
 [http://brain-break.blogspot.com/feeds/posts/default/-/emacs]
 name = Oleksandr Gavenko
