--- a/en.ini
+++ b/en.ini
@@ -73,11 +73,10 @@ encoding = utf-8
 # The facewidth of the defined blog defaults to 64.
 
 [http://edward.oconnor.cx/feed;tag%3Demacs]
-name = Edward O'Connor
-# '
+name = "Edward O'Connor"
 
 [http://emacstidbits.blogspot.com/atom.xml]
-name = #emacs tidbits
+name = "#emacs tidbits"
 
 # [http://www.dydimustk.com/blog/?feed=rss2]
 # name = dydimustk
@@ -96,10 +95,10 @@ name = Alex Schroeder
 # name = Brett Kelly
 
 [http://www.davids-world.com/atom.xml]
-name = David's World
+name = "David's World"
 
 [http://gnuvince.infogami.com/blog/atom.xml]
-name = gnuvince's Elisp blog
+name = "gnuvince's Elisp blog"
 
 [http://emacspeak.blogspot.com/atom.xml]
 name = emacspeak
@@ -108,8 +107,7 @@ name = emacspeak
 # name = Richard Stallman
 
 [http://inkedmn.infogami.com/blog/atom.xml]
-name = ink's Emacs Lisp Blog
-#'
+name = "ink's Emacs Lisp Blog"
 
 [http://yrk.rabkins.net/emacs/index.atom]
 name = Yoni Rabkin Katzenell
