correct language tags for Eugene Burmako's blog

--- a/ru.ini
+++ b/ru.ini
@@ -179,3 +179,6 @@ name = Oleksandr Gavenko
 
 [http://y5ae-ru.blogspot.com/feeds/posts/default/-/emacs]
 name = Andy Legkiy
+
+[http://xeno-by.livejournal.com/data/atom?tag=emacs-ru]
+name = Eugene Burmako
