--- a/en.ini
+++ b/en.ini
@@ -587,6 +587,9 @@ name = edencardim.com
 [http://www.lxsameer.com/?cat=5&feed=rss2]
 name = lxsameer
 
+[http://batsov.com/emacs.xml]
+name = Bozhidar Batsov
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
