add emacsrookie.com to feed

--- a/en.ini
+++ b/en.ini
@@ -513,7 +513,7 @@ name = Denis Meyer
 name = Zing-Ming
 
 [http://roylowrance.wordpress.com/category/emacs/feed/]
-name = Roy Lowrance 
+name = Roy Lowrance
 
 [http://ignaciopp.wordpress.com/tag/emacs/feed/]
 name = Ignacio Paz Posse
@@ -528,7 +528,7 @@ name = Steven Pigeon
 name = Xin Hu
 
 #[http://hillwithfields.wordpress.com/category/programming-2/emacs/feed/]
-#name = 
+#name =
 
 [http://l0st3d.wordpress.com/category/emacs/feed/]
 name = Ed Bowler
@@ -549,7 +549,7 @@ name = vocalfolds
 name = Suvayu Ali
 
 #[http://pyyou.wordpress.com/category/emacs/feed/]
-#name = 
+#name =
 
 [http://draptik.wordpress.com/tag/emacs/feed/]
 name = Draptik
@@ -589,6 +589,9 @@ name = lxsameer
 
 [http://batsov.com/emacs.xml]
 name = Bozhidar Batsov
+
+[http://feeds.feedburner.com/emacsrookiecom]
+name = Emacsrookie
 
 # TODO: look to:
 # - http://snarfed.org/
