add Sonia Hamilton's blog

--- a/en.ini
+++ b/en.ini
@@ -590,6 +590,9 @@ name = lxsameer
 [http://batsov.com/emacs.xml]
 name = Bozhidar Batsov
 
+[http://www.snowfrog.net/tag/emacs/feed/]
+name = Sonia Hamilton
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
