Added Emacs Journey to the english blog list.

--- a/en.ini
+++ b/en.ini
@@ -590,6 +590,9 @@ name = lxsameer
 [http://batsov.com/emacs.xml]
 name = Bozhidar Batsov
 
+[http://emacs-journey.blogspot.com/atom.xml]
+name = Emacs Journey
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
