add Emacs Movies blog

--- a/en.ini
+++ b/en.ini
@@ -590,6 +590,9 @@ name = lxsameer
 [http://batsov.com/emacs.xml]
 name = Bozhidar Batsov
 
+[http://emacsmovies.org/atom.xml]
+name = Emacs Movies
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
