Disable some broken Yahoo Pipes feeds. Update pull-alex Make rule.

--- a/en.ini
+++ b/en.ini
@@ -236,8 +236,8 @@ name = Amortized Analysis
 [http://occident.us/category/emacs/feed/]
 name = Travis Vachon
 
-[http://pipes.yahoo.com/pipes/pipe.run?_id=uur6jvTB3BGL__S_jknRlg&_render=rss]
-name = Johan Lindström
+# [http://pipes.yahoo.com/pipes/pipe.run?_id=uur6jvTB3BGL__S_jknRlg&_render=rss]
+# name = Johan Lindström
 
 # [http://mocker.org/blog/feed/]
 # [http://users.livejournal.com/mocker_/data/atom?tag=emacs]
@@ -425,8 +425,8 @@ name = Anthony Simpson
 name = Nathan Froyd
 
 # http://mark.aufflick.com/blog/
-[http://pipes.yahoo.com/pipes/pipe.run?_id=75d1e170761da7129c7525b9e96a17ab&_render=rss]
-name = Mark Aufflick
+# [http://pipes.yahoo.com/pipes/pipe.run?_id=75d1e170761da7129c7525b9e96a17ab&_render=rss]
+# name = Mark Aufflick
 
 [http://mihai.bazon.net/blog?category=5&feed=rss2]
 name = Mihai Bazon
