Add Raimon Grau.

--- a/en.ini
+++ b/en.ini
@@ -602,6 +602,9 @@ name = Emacsrookie
 [http://www.snowfrog.net/tag/emacs/feed/]
 name = Sonia Hamilton
 
+[http://puntoblogspot.blogspot.com/feeds/posts/default/-/emacs]
+name = Raimon Grau
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
