add fistofsenn devblog to the english feed

--- a/en.ini
+++ b/en.ini
@@ -605,6 +605,9 @@ name = Sonia Hamilton
 [http://puntoblogspot.blogspot.com/feeds/posts/default/-/emacs]
 name = Raimon Grau
 
+[http://feeds.feedburner.com/FistOfSenn]
+name = Yves Senn
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
