Disable Nathan's broken Yahoo Pipe.

--- a/en.ini
+++ b/en.ini
@@ -421,8 +421,8 @@ name = Ben Simon
 name = Anthony Simpson
 
 # http://www.method-combination.net/blog/
-[http://pipes.yahoo.com/pipes/pipe.run?_id=6b6842cdd1e2c960ee8b46a45b257b85&_render=rss]
-name = Nathan Froyd
+# [http://pipes.yahoo.com/pipes/pipe.run?_id=6b6842cdd1e2c960ee8b46a45b257b85&_render=rss]
+# name = Nathan Froyd
 
 # http://mark.aufflick.com/blog/
 # [http://pipes.yahoo.com/pipes/pipe.run?_id=75d1e170761da7129c7525b9e96a17ab&_render=rss]
