Added wisdomandwonder.com emacs-specific feed.

--- a/en.ini
+++ b/en.ini
@@ -608,6 +608,9 @@ name = Raimon Grau
 [http://feeds.feedburner.com/FistOfSenn]
 name = Yves Senn
 
+[http://www.wisdomandwonder.com/tag/emacs/feed]
+name = Grant Rettke
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
