Updated feed and title of echosa's blog.

--- a/en.ini
+++ b/en.ini
@@ -593,8 +593,8 @@ name = Bozhidar Batsov
 [http://emacsmovies.org/atom.xml]
 name = Emacs Movies
 
-[http://emacs-journey.blogspot.com/atom.xml]
-name = Emacs Journey
+[http://echosa.github.com/blog/categories/emacs/atom.xml]
+name = Dev and Such [Emacs Category]
 
 [http://feeds.feedburner.com/emacsrookiecom]
 name = Emacsrookie
