Added What the .emacs.d!?

--- a/en.ini
+++ b/en.ini
@@ -608,6 +608,9 @@ name = Raimon Grau
 [http://feeds.feedburner.com/FistOfSenn]
 name = Yves Senn
 
+[http://whattheemacsd.com/atom.xml]
+name = What the .emacs.d!?
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
