add new blog "jr0cket - community developer"

--- a/en.ini
+++ b/en.ini
@@ -614,6 +614,9 @@ name = What the .emacs.d!?
 [http://www.wisdomandwonder.com/tag/emacs/feed]
 name = Grant Rettke
 
+[http://blog.jr0cket.co.uk/feeds/posts/default/-/Emacs]
+name = jr0cket - community developer
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
