Add David Vázquez's blog

--- a/en.ini
+++ b/en.ini
@@ -614,6 +614,10 @@ name = What the .emacs.d!?
 [http://www.wisdomandwonder.com/tag/emacs/feed]
 name = Grant Rettke
 
+[http://davazp.net/feeds/emacs.xml]
+name = David Vázquez
+
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
