add Timo Geusch's blog

--- a/en.ini
+++ b/en.ini
@@ -617,6 +617,9 @@ name = Grant Rettke
 [http://blog.jr0cket.co.uk/feeds/posts/default/-/Emacs]
 name = jr0cket - community developer
 
+[http://www.lonecpluspluscoder.com/category/emacs/feed/]
+name = Timo Geusch
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
