update URL & name for jr0cket - community developer blog

--- a/en.ini
+++ b/en.ini
@@ -614,8 +614,8 @@ name = What the .emacs.d!?
 [http://www.wisdomandwonder.com/tag/emacs/feed]
 name = Grant Rettke
 
-[http://blog.jr0cket.co.uk/feeds/posts/default/-/Emacs]
-name = jr0cket - community developer
+[http://blog.jr0cket.co.uk/feeds/posts/default/-/PlanetEmacsen?alt=rss]
+name = John Stevenson
 
 [http://www.lonecpluspluscoder.com/category/emacs/feed/]
 name = Timo Geusch
