add Emacs Redux blog

--- a/en.ini
+++ b/en.ini
@@ -620,6 +620,9 @@ name = John Stevenson
 [http://www.lonecpluspluscoder.com/category/emacs/feed/]
 name = Timo Geusch
 
+[http://emacsredux.com/atom.xml]
+name = Emacs Redux
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
