--- a/en.ini
+++ b/en.ini
@@ -623,6 +623,9 @@ name = Timo Geusch
 [http://emacsredux.com/atom.xml]
 name = Emacs Redux
 
+[http://paradigmx.net/blog/categories/emacs/atom.xml]
+name = Paradigm X
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
