re-enable Dimitri Fontaine's blog as we have only Emacs-related posts there...

--- a/en.ini
+++ b/en.ini
@@ -368,8 +368,8 @@ name = Juan Garcia
 [http://gnu.manticore.es/taxonomy/term/1/0/feed]
 name = suso
 
-# [http://tapoueh.org/news.dim.xml]
-# name = Dimitri Fontaine
+[http://tapoueh.org/rss/emacs.xml]
+name = Dimitri Fontaine
 
 [http://psung.blogspot.com/feeds/posts/default/-/emacs]
 name = Phil Sung
