--- a/en.ini
+++ b/en.ini
@@ -626,6 +626,9 @@ name = Emacs Redux
 [http://paradigmx.net/blog/categories/emacs/atom.xml]
 name = Paradigm X
 
+[http://definitelyaplug.b0.cx/post/category/emacs/feed/]
+name = Definitely a plug
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
