added david vazquez.

--- a/en.ini
+++ b/en.ini
@@ -630,6 +630,9 @@ name = Paradigm X
 [http://definitelyaplug.b0.cx/post/category/emacs/feed/]
 name = Definitely a plug
 
+[http://davazp.net/feeds/emacs.xml]
+name = David Vázquez
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
