add Wilfred Hughes's blog

--- a/en.ini
+++ b/en.ini
@@ -633,6 +633,9 @@ name = Definitely a plug
 [http://davazp.net/feeds/emacs.xml]
 name = David Vázquez
 
+[http://www.wilfred.me.uk/emacs_rss.xml]
+name = Wilfred Hughes
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
