Add url and name for @gempesaw's emacs blog to en.ini

--- a/en.ini
+++ b/en.ini
@@ -633,6 +633,9 @@ name = Definitely a plug
 [http://davazp.net/feeds/emacs.xml]
 name = David Vázquez
 
+[http://elisp-solves-problems.tumblr.com/tagged/planet-emacsen/rss]
+name = Daniel Gempesaw
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
