--- a/en.ini
+++ b/en.ini
@@ -139,6 +139,9 @@ name = Michael Olson
 [http://pipes.yahoo.com/pipes/pipe.run?_id=FiExI4MS3RG8VVYcM1rX_Q&_render=rss]
 name = John Sullivan
 
+[http://jbm.io/categories/emacs/atom.xml]
+name = John Mastro
+
 # [http://www.waider.ie/diary-rss.xml]
 # name = Waider
 
