add Ben Simon's blog

--- a/en.ini
+++ b/en.ini
@@ -636,6 +636,9 @@ name = David Vázquez
 [http://www.wilfred.me.uk/emacs_rss.xml]
 name = Wilfred Hughes
 
+[http://www.blogbyben.com/feeds/posts/default/-/emacs]
+name = Ben Simon
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
