added my blog to planet emacsen

--- a/en.ini
+++ b/en.ini
@@ -489,6 +489,9 @@ name = "The Mouse's cradle"
 [http://kevand.wordpress.com/tag/emacs/feed/]
 name = Kevin Anderson
 
+[http://dialectical-computing.de/blog/emacs.xml]
+name = Kototama
+
 [http://netflux.wordpress.com/tag/emacs/feed/]
 name = Václav Belák
 
