add Eric James Michael Ritz's blog

--- a/en.ini
+++ b/en.ini
@@ -645,6 +645,9 @@ name = Wilfred Hughes
 [http://www.blogbyben.com/feeds/posts/default/-/emacs]
 name = Ben Simon
 
+[http://ericjmritz.name/category/tools/emacs/feed/]
+name = Eric James Michael Ritz
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
