Add Daniel Gempesaw's blog to the english list
Resubmitting #20, thanks!

--- a/en.ini
+++ b/en.ini
@@ -648,6 +648,9 @@ name = Ben Simon
 [http://ericjmritz.name/category/tools/emacs/feed/]
 name = Eric James Michael Ritz
 
+[http://elisp-solves-problems.tumblr.com/tagged/planet-emacsen/rss]
+name = Daniel Gempesaw
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
