Add Chen Bin's blog

--- a/en.ini
+++ b/en.ini
@@ -648,6 +648,9 @@ name = Ben Simon
 [http://ericjmritz.name/category/tools/emacs/feed/]
 name = Eric James Michael Ritz
 
+[http://blog.binchen.org/?feed=rss2&tag=emacs]
+name = Chen Bin (redguardtoo)
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
