Disable Jesse Alama's blog.

--- a/en.ini
+++ b/en.ini
@@ -182,8 +182,9 @@ name = Tassilo Horn
 [http://www.hodique.info/_blog.rss]
 name = Yann Hodique
 
-[http://emacs-fan.blogspot.com/atom.xml]
-name = Jesse Alama
+# Seems to have been taken over by spammers.
+# [http://emacs-fan.blogspot.com/atom.xml]
+# name = Jesse Alama
 
 [http://emacs.wordpress.com/feed/]
 # name = José Antonio Ortega Ruiz
