Add Mark Hepburn

--- a/en.ini
+++ b/en.ini
@@ -651,6 +651,9 @@ name = Eric James Michael Ritz
 [http://blog.binchen.org/?feed=rss2&tag=emacs]
 name = Chen Bin (redguardtoo)
 
+[http://blog.everythingtastesbetterwithchilli.com/atom-emacs.xml]
+name = Mark Hepburn
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
