add Alexander Sviridov's blog

--- a/ru.ini
+++ b/ru.ini
@@ -182,3 +182,6 @@ name = Andy Legkiy
 
 [http://xeno-by.livejournal.com/data/atom?tag=emacs-ru]
 name = Eugene Burmako
+
+[http://sviridov.github.io/blog/categories/emacs/atom.xml]
+name = Alexander Sviridov
