Remove double quotes from Chinese planet

--- a/zh.ini
+++ b/zh.ini
@@ -6,9 +6,9 @@
 # link: Link to the main page
 # owner_name: Your name
 # owner_email: Your e-mail address
-name = "Emacs行星"
+name = Emacs行星
 link = http://planet.emacsen.org/zh/
-owner_name = "任文山"
+owner_name = 任文山
 owner_email = renws1990@gmail.com
 
 # cache_directory: Where cached feeds are stored
@@ -73,4 +73,4 @@ encoding = utf-8
 # The facewidth of the defined blog defaults to 64.
 
 [http://wenshanren.org/?cat=10&tag=zh&feed=rss2]
-name = "肉山博客"
+name = 肉山博客
