Add Wenshan's Blog

--- a/en.ini
+++ b/en.ini
@@ -667,6 +667,9 @@ name = Mark Hepburn
 [http://www.lunaryorn.com/tags/emacs.atom]
 name = Sebastian Wiesner
 
+[http://wenshanren.org/?cat=10&tag=english&feed=rss2]
+name = Ren Wenshan
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
