Disabled rlazo's blog due to spam.

--- a/en.ini
+++ b/en.ini
@@ -251,8 +251,8 @@ name = Travis Vachon
 [http://mocker.org/rss.xml?tag=emacs]
 name = Kyle Sexton
 
-[http://www.rlazo.org/blog/feeds/category/Emacs/]
-name = Rodrigo Lazo
+# [http://www.rlazo.org/blog/feeds/category/Emacs/]
+# name = Rodrigo Lazo
 
 [http://www.shellarchive.co.uk/index.xml]
 name = Phil Jackson
