Add my blog to Planet Emacsen

--- a/en.ini
+++ b/en.ini
@@ -670,6 +670,9 @@ name = Sebastian Wiesner
 [http://wenshanren.org/?cat=10&tag=en&feed=rss2]
 name = Ren Wenshan
 
+[http://punchagan.muse-amuse.in/tags/emacs.xml]
+name = punchagan
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
