--- a/en.ini
+++ b/en.ini
@@ -673,6 +673,9 @@ name = Ren Wenshan
 [http://punchagan.muse-amuse.in/tags/emacs.xml]
 name = punchagan
 
+[http://camdez.com/blog/categories/emacs/atom.xml]
+name = Cameron Desautels
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
