Add Michael Fogleman's blog.

--- a/en.ini
+++ b/en.ini
@@ -676,6 +676,10 @@ name = punchagan
 [http://camdez.com/blog/categories/emacs/atom.xml]
 name = Cameron Desautels
 
+# http://mwfogleman.github.io/
+[https://pipes.yahoo.com/pipes/pipe.run?_id=42e21512250c3875a3eb1643fe5eb875&_render=rss]
+name = Michael Fogleman
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
