Add (or emacs irrelevant).

--- a/en.ini
+++ b/en.ini
@@ -680,6 +680,9 @@ name = Cameron Desautels
 [https://pipes.yahoo.com/pipes/pipe.run?_id=42e21512250c3875a3eb1643fe5eb875&_render=rss]
 name = Michael Fogleman
 
+[http://oremacs.com/atom.xml]
+name = Oleh Krehel
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
