Phil Lord added.

--- a/en.ini
+++ b/en.ini
@@ -682,6 +682,9 @@ name = Michael Fogleman
 [http://oremacs.com/atom.xml]
 name = Oleh Krehel
 
+[http://www.russet.org.uk/blog/category/all/professional/tech/emacs/feed]
+name=Phillip Lord
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
