Add thewanderingcoder. Thanks, Sacha!

--- a/en.ini
+++ b/en.ini
@@ -75,6 +75,9 @@ encoding = utf-8
 [http://edward.oconnor.cx/feed;tag%3Demacs]
 name = "Edward O'Connor"
 
+[http://thewanderingcoder.com/category/emacs/feed/]
+name = Sean Miller: The Wandering Coder
+
 [http://emacstidbits.blogspot.com/atom.xml]
 name = "#emacs tidbits"
 
