Add Ryan Rix to en-planet

--- a/en.ini
+++ b/en.ini
@@ -688,6 +688,9 @@ name = (or emacs
 [http://www.russet.org.uk/blog/category/all/professional/tech/emacs/feed]
 name=Phillip Lord
 
+[http://whatthefuck.computer/rss.xml]
+name=Ryan Rix
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
