Add William Denton's feed

--- a/en.ini
+++ b/en.ini
@@ -691,6 +691,9 @@ name=Phillip Lord
 [http://whatthefuck.computer/rss.xml]
 name=Ryan Rix
 
+[https://www.miskatonic.org/feed/emacs.xml]
+name = William Denton
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
