--- a/en.ini
+++ b/en.ini
@@ -691,6 +691,9 @@ name=Phillip Lord
 [http://whatthefuck.computer/rss.xml]
 name=Ryan Rix
 
+[https://pragmaticemacs.wordpress.com/feed/]
+name = Pragmatic Emacs
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
