Add Howard's blog.

--- a/en.ini
+++ b/en.ini
@@ -694,6 +694,9 @@ name=Ryan Rix
 [http://pragmaticemacs.com/feed/]
 name = Pragmatic Emacs
 
+[http://howardism.org/index.xml]
+name = Howard Abrams 
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
