--- a/en.ini
+++ b/en.ini
@@ -694,6 +694,9 @@ name=Ryan Rix
 [http://pragmaticemacs.com/feed/]
 name = Pragmatic Emacs
 
+[https://medium.com/feed/@samueltonini]
+name = Samuel Tonini
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
