Add Chris Wellon's blog.

--- a/en.ini
+++ b/en.ini
@@ -694,6 +694,9 @@ name=Ryan Rix
 [http://pragmaticemacs.com/feed/]
 name = Pragmatic Emacs
 
+[http://nullprogram.com/tags/emacs/feed/]
+name=Chris Wellons
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
