--- a/en.ini
+++ b/en.ini
@@ -694,6 +694,9 @@ name=Ryan Rix
 [http://pragmaticemacs.com/feed/]
 name = Pragmatic Emacs
 
+[http://matt.hackinghistory.ca/?cat=4&feed=rss2]
+name = Matt Price
+
 # TODO: look to:
 # - http://snarfed.org/
 # - http://lars.ingebrigtsen.no/
