Add Matt Price.

--- a/en.ini
+++ b/en.ini
@@ -694,6 +694,9 @@ name=Ryan Rix
 [http://pragmaticemacs.com/feed/]
 name = Pragmatic Emacs
 
+[http://matt.hackinghistory.ca/blog/feed/atom/]
+name=Matt Price
+
 [http://nullprogram.com/tags/emacs/feed/]
 name=Chris Wellons
 
