Add Marcin Borkowski.

--- a/en.ini
+++ b/en.ini
@@ -165,6 +165,9 @@ name = Phil Hagelberg
 [http://furius.ca/blog/tag/Emacs/rss]
 name = Martin Blais
 
+[http://mbork.pl/?action=rss;rcfilteronly=CategoryEmacs;all=0;showedit=0;title=%20Content%20AND%20Presentation]
+name = Marcin Borkowski
+
 # [http://blog.romanlagunov.ru/feed/atom/]
 # name = Roman Lagunov
 
